# ai-pdf-parser

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260618_0647_51d7ef33fcbe_add_users_and_user_id.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  documents.py  health.py  rules.py
app/config/: model_routes.yaml
app/core/: exceptions.py  logging.py  router.py  security.py  settings.py
app/db/: base.py  models.py
app/schemas/: callback.py  common.py  document.py  rule.py  user.py
app/services/: storage.py  webhooks.py
app/services/pdf/: llm.py  pipeline.py  plumber.py  prompts.py  render.py  text.py
app/tasks/: callback.py  parse.py  queue.py  worker.py
app/ui/: routes.py
app/ui/static/: app.css
app/ui/templates/: base.html  document.html  index.html  login.html  rules.html  signup.html
tests/: test_router.py
wiki/: 01-overview.md  02-architecture.md  03-data-model.md  04-api-reference.md  05-ui.md  06-parsing-pipeline.md  07-rules-and-extraction.md  08-model-routing.md  09-background-jobs-and-webhooks.md  10-configuration.md  11-development.md  12-feature-playbooks.md  13-wiki-maintenance.md  README.md
