[project]
name = "pdf-parser"
version = "0.1.0"
description = "Async AI-powered PDF parser with rule-based extraction, webhooks, and a HTTP API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "arq>=0.26.3",
    "redis>=5.1.0",
    "litellm>=1.51.0",
    "pdfplumber>=0.11.4",
    "pypdfium2>=5.10.0",
    "pillow>=11.0.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "python-slugify>=8.0.4",
    "aiofiles>=24.1.0",
    "google-cloud-storage>=2.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
